--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
+  "private": true,
   "description": "Detailed portfolio of my work",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www",
+	"test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "body-parser": "~1.17.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.3",
+    "express": "~4.15.2",
+    "morgan": "~1.8.1",
+    "node-sass-middleware": "0.9.8",
+    "pug": "~2.0.0-beta11",
+    "serve-favicon": "~2.4.2"
   },
   "repository": {
     "type": "git",
